# Pathfinder_ES

./: README.md  pyproject.toml
frontend/: index.html
src/pathfinder_es/: __init__.py  api.py  cli.py  scraper.py  semantic.py  server.py  storage.py  translator.py
tests/: test_semantic.py  test_server.py  test_translator.py
